# tic_tac_toe_web_interface

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  app.py  dockerfile  game_logic.py  mypy.ini  pyproject.toml  requirements.txt  tic_tac_toe_game.py
.github/workflows/: ci.yml
static/css/: style.css
static/js/: script.js
templates/: index.html
tests/: test_app.py
tic_tac_toe_web_interface/: app.py
tic_tac_toe_web_interface/static/css/: style.css
